@startuml
class User {
  - String userName
  - String password
  - Setting setting
  + String getUserName()
  + String getPassword()
  + Setting getSetting() 
  + setSetting(Setting setting)
  + setUserName(String userName)
  + setPassword(String password)
}
 
interface UserPort {
   save(User user)
   delete()
   String getPassword(String userName)
   List<String> getAllUserNames()
   User findByUserName(String userName)
   updateUser (User user)
   changeUserName(String newUserName)
   changePassword(String newPassword)
}

class UserAdapter{
+save(User user)
+delete()
+String getPassword(String userName)
+List<String> getAllUserNames()
+User findByUserName(String userName)
+updateUser(User user)
+changeUserName(String newUserName)
+changePassword(String newPassword)
}

UserAdapter--|>UserPort
UserAdapter-->User
UserPort-->User
@enduml
